syntax = "proto3";

option go_package = "scmc/rpc/pb/image";

package image;

service Image {
    // 查询可用镜像列表
    rpc List(ListRequest) returns (ListReply) {}
    // 查询所有镜像列表
    rpc ListDB(ListDBRequest) returns (ListDBReply) {}
    // 上传镜像
    rpc Upload(stream UploadRequest) returns (UploadReply) {}
    // 更新已上传镜像
    rpc Update(stream UpdateRequest) returns (UpdateReply) {}
    // 下载镜像文件
    rpc Download(DownloadRequest) returns (stream DownloadReply) {}
    // 镜像审批
    rpc Approve(ApproveRequest) returns (ApproveReply) {}
    // 删除已有镜像
    rpc Remove(RemoveRequest) returns (RemoveReply) {}
    rpc AgentSync(AgentSyncRequest) returns (AgentSyncReply) {}
}

message ListRequest {
    int64 node_id = 1;
}

message ListReply {
    repeated ImageInfo images = 1;
}

message ListDBRequest {}

message ListDBReply {
    repeated ImageDBInfo images = 1;
}

message UploadRequest {
    UploadInfo info       = 1;
    SignInfo   sign       = 2;
    bytes      chunk_data = 3;
}

message UploadReply {
    int64 image_id = 1;  //in db
}

message UpdateRequest {
    int64      image_id   = 1;
    UploadInfo info       = 2;
    SignInfo   sign       = 3;
    bytes      chunk_data = 4;
}

message UpdateReply {}

message DownloadRequest {
    int64 image_id = 1;
}

message DownloadReply {
    UploadInfo info       = 1;
    bytes      chunk_data = 2;
}

message ApproveRequest {
    int64  image_id      = 1;
    bool   approve       = 2;
    string reject_reason = 3;
}

message ApproveReply {}

message RemoveRequest {
    repeated int64 image_ids = 1;
}

message RemoveReply {
    repeated string ok_ids = 1;
}

message AgentSyncRequest {
    repeated string to_remove = 1;  // 需要删除的镜像
    repeated string to_pull   = 2;  // 需要从镜像服务器同步的镜像
}

message AgentSyncReply {}

/***** DATA TYPES *****/

message ImageInfo {
    string name   = 1;  // repo + tag
    string repo   = 2;
    string tag    = 3;
    string digest = 4;
    int64  size   = 5;  // unit: bytes
}

message ImageDBInfo {
    int64  id              = 1;
    string name            = 2;
    string version         = 3;
    string description     = 4;
    int32  verify_status   = 5;  // 0:验签失败 1:异常 2:验签成功
    int32  approval_status = 6;  // 0:待审批 1:审批拒绝 2:审批通过
    int64  size            = 7;  // unit: bytes
    int64  create_at       = 21;
    int64  update_at       = 22;
}

message UploadInfo {
    string name        = 1;
    string version     = 2;
    string type        = 3;
    string checksum    = 4;
    string description = 5;
    int64  size        = 6;
}

message SignInfo {
    int64 size       = 1;
    bytes chunk_data = 2;
}
